--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,8 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>spring-boot-aws</finalName>
     </build>
 
 </project>
+
